--- a/index.html
+++ b/index.html
@@ -42,6 +42,34 @@
         width: 80px;
       }
 
+      .flex-container {
+        display: flex;
+
+      }
+
+      .flex-item-1, .flex-item-2, .flex-item-3, .flex-item-4 {
+        flex: 10;
+      }
+
+      .flex-center {
+        justify-content: center;
+        align-items: center;
+      }
+
+      .flex-space-between {
+        justify-content: center;
+        flex-direction: column;
+      }
+
+      .flex-container {
+        display: flex;
+        flex-wrap: wrap;
+      }
+
+      .flex-basis-item-50 {
+        flex-basis: 50%;
+      }
+
     </style>
   </head>
   <body>
